remove redundant declaration; prevent overflow from hard-set width

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -159,7 +159,6 @@ body {
 	background-color: var(--bg);
 	border-radius: var(--radius);
 	padding: 1rem;
-	min-width: 200px;
 }
 
 .card header {
